fix logo animation overflowing on mobile

--- a/src/logo.css
+++ b/src/logo.css
@@ -1,5 +1,6 @@
 .PhoebeLogo {
   display: block;
+  overflow: visible;
   margin: auto;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -313,14 +314,14 @@
 }
 
 /* ignore hover effects on spinner */
-.animateSpinner > .PLTB {
+/* .animateSpinner > .PLTB {
   opacity: 0
-}
+} */
 
-.animateSpinner > .PLT8 {
+/* .animateSpinner > .PLT8 {
   animation: none !important;
   background-color: rgba(230, 230, 230, 0.65);
-}
+} */
 
 
 @keyframes shimmerFade {
